# ascii-cinema

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
ascii_cinema/: __init__.py  __main__.py  converter.py  player.py  styles.py
docs/: complete_setup.md  project_summary.md  setup_guide.md
scripts/: commands.sh  setup.sh  setup_explicit.sh
tests/: test_ascii_cinema.py
